--- a/src/css/general.css
+++ b/src/css/general.css
@@ -2,7 +2,8 @@ html {
 	font-size: 16px;
 }
 body {
-  height: 100%;
+  height: 100vh;
+  background-color:  #ececec;
   font-family: arial, helvetica, sans-serif;
 }
 .main-container{
@@ -62,6 +63,28 @@ textarea:focus, input:focus{
 .checked {
   color: #008489;
 }
+
+
+
+.App{
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 12%;
+  flex-direction: column;
+}
+
+.App h1{
+  margin-bottom: 20px;
+}
+.app-container{
+  
+  width: 600px;
+  
+}
+
+
 
 @media (max-width: 1200px) { 
 	.main-container{
