--- a/src/components/tasks/task/styles.css
+++ b/src/components/tasks/task/styles.css
@@ -9,14 +9,17 @@
     box-shadow: 3px 4px 4px #888888;
     justify-content: space-between;
     margin-bottom: 1px;
-    transition: .5s ease all; 
+    
+    transition: 1s ease all;
 }
 
 .task-container h2{
     padding-left: 20px;
+    transition: 1s ease all;
 }
 
 .task-container button{
+    outline: none;
     cursor: pointer;
     background-color: rgb(0,132,255);
     border: none;
@@ -31,10 +34,12 @@
 }
 
 .task-isClicked{
-    transition: .5s ease all; 
-    transform: translateX(20px);
+    
 }
 .task-isClicked h2{
+    transform: translateX(30px);
     color: gray;
+    text-decoration: line-through;
+    transition: 1s ease all;
 }
     
