--- a/src/components/bottombar/styles.css
+++ b/src/components/bottombar/styles.css
@@ -1,8 +1,8 @@
-.task-container{
+.bottombar-container{
     
     border-radius: 30px;
     background-color: #f1f1f1;
-    cursor: pointer;
+    
     display: flex;
     align-items: center;
     height: 60px;
@@ -13,13 +13,7 @@
     transition: 1s ease all;
 }
 
-.task-container h2{
-    padding-left: 20px;
-    transition: 1s ease all;
-    user-select: none;
-}
-
-.task-container button{
+.bottombar-container button{
     outline: none;
     cursor: pointer;
     background-color: rgb(0,132,255);
@@ -34,15 +28,3 @@
     font-size: 16px;
     user-select: none;
 }
-
-.task-isClicked{
-    
-}
-.task-isClicked h2{
-    transform: translateX(30px);
-    user-select: none;
-    color: gray;
-    text-decoration: line-through;
-    transition: 1s ease all;
-}
-    
