la bar de trie est complete et fonctionnelle.

--- a/src/components/bottombar/styles.css
+++ b/src/components/bottombar/styles.css
@@ -28,3 +28,13 @@
     font-size: 16px;
     user-select: none;
 }
+
+.bottombar-container .selected{
+    background-color: rgb(0, 89, 255);
+    transition: .5s ease all;
+}
+
+.clearall:hover{
+    background-color: rgb(0, 89, 255);
+    transition: .5s ease all; 
+}
