--- a/src/components/bottombar/styles.css
+++ b/src/components/bottombar/styles.css
@@ -8,7 +8,7 @@
     height: 60px;
     box-shadow: 3px 4px 4px #888888;
     justify-content: space-between;
-    margin-bottom: 1px;
+    margin-top: 10px;
     
     transition: 1s ease all;
 }
